--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ keras-vggface==0.6
 mtcnn==0.1.1
 numpy==1.23.5
 opencv_python==4.7.0.72
-Pillow==9.4.0
 Pillow==9.5.0
-scikit_learn==1.2.1
+scikit-learn==1.2.1
 streamlit==1.21.0
