--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+keras==2.10.0
+tensorflow==2.10.0
 keras-vggface==0.6
 mtcnn==0.1.1
 numpy==1.23.5
@@ -5,4 +7,3 @@ opencv_python==4.7.0.72
 Pillow==9.5.0
 scikit-learn==1.2.1
 streamlit==1.21.0
-tensorflow==2.10.0
