--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ Pygments==2.15.0
 Pympler==1.0.1
 python-slugify==8.0.0
 pytz==2022.7.1
-pytz-deprecation-shim==0.1.0.post0
+pytz-deprecation-shim==0.1.0
 pywin32==305.1
 PyYAML==6.0
 requests-oauthlib==1.3.0
